--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,2 +1,3 @@
+<h1 class="text-center text-primary-emphasis mt-2">Le foto delle mie vacanze</h1>
 <h4 class="text-primary">Guarda le foto delle mie vacanze</h4>
 <p>per vedere le foto clicca <a routerLink="album">qui</a></p>
